# voice-recorder

./: .env.example  .gitignore  .prettierignore  API_CLIENT_VERIFICATION.md  CHANGELOG.md  CHECKPOINT_10_FIXES.md  CORRECTIONS_SUMMARY.md  CURRENT_STATUS.md  IMPLEMENTATION_REVIEW.md  LOCAL_WHISPER_IMPLEMENTATION_COMPLETE.md  PROVIDER_FIXES_SUMMARY.md  QUICK_START_AFTER_CORRECTIONS.md  README.md  REMOTE_OLLAMA_IMPLEMENTATION_COMPLETE.md  TASK_8.1_COMPLETION_SUMMARY.md  TAURI_COMPLETION_REPORT.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  postcss.config.mjs  requirements.txt  tailwind.config.ts  test-llm-quick.js  tsconfig.json
.github/: dependabot.yml
docs/: .wslconfig.example  ANIMATIONS.md  API_INTEGRATION.md  API_KEY_CONFIGURATION_SUMMARY.md  API_KEY_SETUP.md  ARCHITECTURE.md  BATCH_EXPORT.md  BUILD_CONFIGURATION.md  BUILD_QUICK_REFERENCE.md  CODE_SIGNING.md  CODE_SIGNING_IMPLEMENTATION.md  CODE_SIGNING_QUICK_START.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_QUICK_REFERENCE.md  DEPENDENCY_SETUP_VERIFICATION.md  DEVELOPER_GUIDE.md  ENVIRONMENT_SETUP.md  EXPORT_SETTINGS.md  FAQ.md  GLOBAL_HOTKEY_IMPLEMENTATION.md  HOTKEY_API_RESEARCH.md  HOTKEY_CONFLICT_HANDLING.md  HOTKEY_CONFLICT_IMPLEMENTATION_SUMMARY.md  ICONS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MONITORING.md  PACKAGING.md  SETUP.md  (+23 more)
src-tauri/: Cargo.toml  WHISPER_SETUP.md  tauri.conf.json
src-tauri/icons/: .gitkeep  CONVERSION_GUIDE.md  README.md
src-tauri/src/: TRANSCRIPTION_IMPLEMENTATION.md  file_utils.rs  lib.rs  main.rs  system_info.rs  whisper.rs
(+243 files in other folders)
