[package]
name = "voice-intelligence"
version = "0.1.0"
description = "Voice Intelligence Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "voice_intelligence_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
# whisper-rs handles its own build configuration through whisper-rs-sys

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
sha2 = "0.10"
hex = "0.4"
whisper-rs = { version = "0.15", features = ["raw-api"] }
once_cell = "1.19"
lazy_static = "1.4"
num_cpus = "1.16"
futures-util = "0.3"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-cli = "2"
